# openusage

./: CONTRIBUTING.md  README.md  SECURITY.md  TRADEMARK.md  index.html  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_provider.yml
docs/: capture-logs.md  local-http-api.md  opencode-auth-rotation.md  proxy.md
docs/plugins/: api.md  schema.md
docs/providers/: antigravity.md  claude.md  codex.md  copilot.md  cursor.md  deepseek.md  jetbrains-ai-assistant.md  kilo.md  kimi-k2.md  kiro.md  mistral.md  opencode.md  openrouter.md  warp.md  zai.md
plugins/amp/: plugin.js  plugin.json  plugin.test.js
plugins/antigravity/: plugin.js  plugin.json  plugin.test.js
plugins/claude/: plugin.js  plugin.json  plugin.test.js
plugins/codex/: plugin.js  plugin.json  plugin.test.js
plugins/copilot/: plugin.js  plugin.json  plugin.test.js
plugins/cursor/: plugin.js  plugin.json  plugin.test.js
plugins/deepseek/: plugin.js  plugin.json  plugin.test.js
plugins/factory/: plugin.js  plugin.json  plugin.test.js
plugins/gemini/: plugin.js  plugin.json  plugin.test.js
plugins/jetbrains-ai-assistant/: plugin.json
plugins/kilo/: plugin.js  plugin.json  plugin.test.js
plugins/kimi/: plugin.js  plugin.json  plugin.test.js
plugins/kimi-k2/: plugin.js  plugin.json  plugin.test.js
plugins/kiro/: plugin.js  plugin.json  plugin.test.js
plugins/minimax/: plugin.js  plugin.json  plugin.test.js
plugins/mistral/: plugin.js  plugin.json  plugin.test.js
plugins/opencode-go/: plugin.js  plugin.json  plugin.test.js
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_auth.rs  account_import.rs  account_store.rs  auth.rs  config.rs  error.rs  external_auth.rs  lib.rs  main.rs  models.rs  oauth.rs  opencode_auth_file.rs  panel.rs  secrets.rs  tray.rs  utils.rs  webkit_config.rs
src-tauri/src/local_http_api/: cache.rs  server.rs
src-tauri/src/plugin_engine/: host_api.rs  manifest.rs  runtime.rs
(+77 files in other folders)
