[package]
name = "openburn"
version = "0.6.15"
description = "OpenBurn is an open source AI subscription limit tracker"
authors = ["Robin Ebers"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openburn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
time = { version = "0.3.47", features = ["formatting"] }
dirs = "6"
log = "0.4"
reqwest = { version = "0.13", features = ["blocking", "json", "socks"] }
rquickjs = { version = "0.11", features = ["bindgen"] }
tauri-plugin-store = "2.4.2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2.5.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
regex-lite = "0.1.9"
aes-gcm = "0.10.3"
thiserror = "2"
tauri-plugin-keyring = "0.1.0"
rand = "0.8"
sha2 = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
tiny_http = "0.12"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSScreen", "NSGraphics"] }
objc2-web-kit = { version = "0.3", features = ["WKPreferences", "WKWebView", "WKWebViewConfiguration"] }

[dev-dependencies]
serial_test = "3.4.0"
